--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta charset="utf-8">
+<title>Maker's &amp; Hive</title>
+<style type="text/css"></style></head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+	<div style="background-image:url(new_website.jpg); width:700px; height:407px; margin:100px auto;">
+    </div>
+
+
+</body></html>
