update with fb likes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
 <meta charset="utf-8">
+
 <title>Maker's &amp; Hive</title>
-<style type="text/css"></style></head>
+
+<style type="text/css">
+</style>
+</head>
+
 
 <body>
-	<div style="background-image:url(new_website.jpg); width:700px; height:407px; margin:100px auto;">
-    </div>
+	
+<div style="background-image:url(new_website.jpg); width:700px; height:407px; margin:100px auto;">
+   
+
+ </div>
+<a href="https://plus.google.com/105582718131114264854" rel="publisher">Google+</a>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '797719206963204',
+      xfbml      : true,
+      version    : 'v2.2'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 
 
 </body></html>
